# Stripe_Django

./: README.md
PaymentStripe/: .env  Dockerfile  Procfile  db.sqlite3  manage.py  pyproject.toml  requirements.txt
PaymentStripe/OrdersApp/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
PaymentStripe/OrdersApp/migrations/: 0001_initial.py  0002_alter_item_price.py  0003_alter_item_price.py  0004_item_currency.py  0005_alter_item_currency.py  0006_order.py  0007_order_currency.py  0008_alter_item_currency_alter_order_currency.py  0009_discount_order_discounts.py  0010_tax_alter_discount_percent_off_order_taxes.py  0011_rename_discription_item_description_and_more.py  0012_alter_order_discounts_alter_order_taxes.py  0013_alter_discount_duration_in_months_and_more.py  0014_alter_discount_duration_in_months.py
PaymentStripe/PaymentStripe/: asgi.py  settings.py  urls.py  wsgi.py
PaymentStripe/templates/: item_buy.html  items.html  main.html  order_buy.html
PaymentStripe/templates/item/: item_buy.html
PaymentStripe/templates/order/: order_buy.html  order_create.html  orders.html
