[tool.poetry]
name = "stripe_payment"
version = "0.1.0"
description = ""
authors = ["Dmitry Veko <blankvektrius@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
stripe = "^4.1.0"
whitenoise = "^6.2.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
